syntax = "proto3";

package chromalogger;

service ChromaloggerService {
  rpc ProcessData (DataRequest) returns (DataResponse);
}

message DataRequest {
  string data = 1;
  string projectName = 2;
}

message DataResponse {
  string status = 1;
  string message = 2;
  string processedData = 3;
}